--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
 
+<center>
 <img src="https://octodex.github.com/images/privateinvestocat.jpg" alt="Private Investocat" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
