--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
 
-<center>
-<img src="https://octodex.github.com/images/privateinvestocat.jpg" alt="Private Investocat" />
+<img src="https://octodex.github.com/images/privateinvestocat.jpg" alt="Private Investocat" align="middle"/>
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
   <p>Hello World! I'm GitHubOctoCatBot. This is my website!</p>
