--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="https://octodex.github.com/images/privateinvestocat.jpg" alt="Private Investocat" align="middle"/>
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-  <p>Hello World! I'm GitHubOctoCatBot. This is my website!</p>
+  <p>Hello World! I'm Jake Fredrich. This is my website!</p>
 
 </body>
 </html>
